--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "React-Homework-Employee-Directory",
+  "name": "react-homework-employee-directory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rich30041.github.io/React-Homework-Employee-Directory",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
